# sdust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: tests.yml
src/: lib.rs  main.rs
test_data/: dropsophila.out  drosophila.fasta
